--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,33 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
-.corners {
-  background-color: inherit;
-  position: relative;
-}
-
-.corners::before,
-.corners::after {
-  --spacing: -6em;
-  --size: 4px;
-  height: 50%;
-  aspect-ratio: 1 / 1;
-  content: '';
-  position: absolute;
-  border: var(--size) solid theme('colors.accent');
-  border-radius: 1em 0 1em 0;
-}
-
-.corners::before {
-  left: var(--spacing);
-  top: var(--spacing);
-  border-width: var(--size) 0 0 var(--size);
+.background-pattern {
+  background-color: #16161a;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23242629' fill-opacity='0.46'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 
-.corners::after {
-  right: var(--spacing);
-  bottom: var(--spacing);
-  border-width: 0 var(--size) var(--size) 0;
-}
