--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,4 +10,23 @@
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23242629' fill-opacity='0.46'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
+.text-loader {
+  width: 100%;
+  height: 1.2em;
+  background-color: red;
+  background: linear-gradient(-45deg, 
+    #333 0%,
+    #333 42%,
+    #888 50%,
+    #333 58%,
+    #333 100%
+  );
+	background-size: 150% 150%;
+  animation: loading 1.5s ease-in-out infinite;
+  margin-bottom: 1em;
+}
 
+@keyframes loading {
+  0%{background-position: 180% 0%}
+  100%{background-position: -80% 0%}
+}
