--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,15 @@
   margin-bottom: 1em;
 }
 
+
+.background-gradient {
+  background: radial-gradient(theme(colors.background-secondary) 0%, theme(colors.background) 50%);
+}
+
+.background-border {
+  background: radial-gradient(theme(colors.accent) 0%, theme(colors.background) 50%);
+}
+
 @keyframes loading {
   0% {
     background-position: 180% 0%;
