--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,10 @@
   margin-bottom: 1em;
 }
 
+.hexagon {
+  clip-path: polygon(0% 25%, 0% 75%, 50% 100%, 100% 75%, 100% 25%, 50% 0%);
+}
+
 
 .background-border {
   background: radial-gradient(
